--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/@posva/*"
   ],
   "devDependencies": {
     "lerna": "^2.11.0"
