--- a/packages/@posva/lerna-a/package.json
+++ b/packages/@posva/lerna-a/package.json
@@ -5,6 +5,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "cows": "^2.0.0"
