--- a/packages/@posva/lerna-c/package.json
+++ b/packages/@posva/lerna-c/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@posva/lerna-c",
-  "private": true,
+  "version": "0.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "license": "MIT"
 }
