--- a/packages/@posva/lerna-dependent/package.json
+++ b/packages/@posva/lerna-dependent/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@posva/lerna-a": "^0.0.3",
-    "@posva/lerna-b": "^0.0.1"
+    "@posva/lerna-b": "^0.0.1",
+    "@posva/lerna-c": "^0.0.0"
   },
   "license": "MIT"
 }
